--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -1,7 +1,4 @@
 .main {
-  @include breakpoint(mobile) {
-    height: calc(100% - #{$footer-height}*2);
-  }
   @include breakpoint(tablet) {
     .task {
       font-size: $base-font-size;
